src/test/groovy/org/jalasoft/gradle/plugins/enforce/interceptor/resources/objects/ObjectWebLink.object
<CustomObject>
    <fields>
        <fullName>Primary_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to track the account of the contact&apos;s Organization Affiliation record that is marked primary.</inlineHelpText>
        <label>Primary Affiliation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Do Not Use.  Use Organization Affiliations.</relationshipLabel>
        <relationshipName>PrimaryAffiliatedContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Soft_Credit_Last_N_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total amount of Soft Credit, closed in the last number of days defined in Household Settings.</inlineHelpText>
        <label>Soft Credit Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>


    <fields>
        <fullName>is_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Contact&apos;s Current Address lookup overrides the Household&apos;s default Address or seasonal Address.</description>
        <inlineHelpText>If checked, the Contact&apos;s Current Address lookup overrides the Household&apos;s default Address or seasonal Address.</inlineHelpText>
        <label>Address Override</label>
        <type>Checkbox</type>
    </fields>

</CustomObject>